Fix gap between pixels and color picker bug

--- a/style.css
+++ b/style.css
@@ -112,16 +112,16 @@ h1 {
 
 /** Screen **/
 #screen {
-    background-color: rgba(0, 0, 0, 0.37);
     margin: auto;
     width: 640px;
     height: 640px;
     padding: 0px;
     display: flex;
     flex-wrap: wrap;
+    align-content: flex-start;
 }
 .square {
     background-color: white;
-    flex: 0 1 auto;
+    flex: 0 0 auto;
     user-select: none;
 }
